--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -28,6 +28,7 @@
         "message_too_long_prompt": ""
     },
     "l10n_permission_denied_reasons": {
+        "channel_or_group_not_found": "",
         "permission_denied_no_permission": "",
         "permission_denied_not_bot_manager": "",
         "permission_denied_not_chat_admin": "",
@@ -76,6 +77,7 @@
     },
     "l10n_cmd_import": {
         "send_opml_prompt": "",
+        "import_for_channel_or_group_prompt": "",
         "send_opml_reply_placeholder": "",
         "fetch_file_failed": "",
         "opml_import_processing": "",
@@ -217,6 +219,7 @@
         "cmd_description_help": "",
         "cmd_description_test": "",
         "cmd_description_set_option": "",
-        "cmd_description_user_info": ""
+        "cmd_description_user_info": "",
+        "usage_in_channel_or_group_prompt_html": ""
     }
 }
