feat(*): new formatting "only media, no content (if any media)"
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/src/i18n/ca.json
+++ b/src/i18n/ca.json
@@ -107,6 +107,7 @@
         "display_media": "",
         "display_media_-1": "",
         "display_media_0": "",
+        "display_media_1": "",
         "display_author": "",
         "display_author_-1": "",
         "display_author_0": "",
