--- a/src/i18n/yue.json
+++ b/src/i18n/yue.json
@@ -107,6 +107,7 @@
         "display_media": "展示媒體",
         "display_media_-1": "閂",
         "display_media_0": "開",
+        "display_media_1": "只有媒體，冇內容 (如果有媒體)",
         "display_author": "展示作者",
         "display_author_-1": "閂",
         "display_author_0": "自動",
