--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -107,6 +107,7 @@
         "display_media": "Display media",
         "display_media_-1": "Disable",
         "display_media_0": "Enable",
+        "display_media_1": "Only media, no content (if any media)",
         "display_author": "Display author",
         "display_author_-1": "Disable",
         "display_author_0": "Auto",
