--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -107,6 +107,7 @@
         "display_media": "",
         "display_media_-1": "",
         "display_media_0": "",
+        "display_media_1": "",
         "display_author": "",
         "display_author_-1": "",
         "display_author_0": "",
