--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -107,6 +107,7 @@
         "display_media": "Medyayı görüntüle",
         "display_media_-1": "Devre dışı bırak",
         "display_media_0": "Etkinleştir",
+        "display_media_1": "",
         "display_author": "Yazarı görüntüle",
         "display_author_-1": "Devre dışı bırak",
         "display_author_0": "Otomatik",
