docs/chore: trim some formatting settings' name
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/src/i18n/yue.json
+++ b/src/i18n/yue.json
@@ -104,21 +104,21 @@
         "link_preview": "連結預覽",
         "link_preview_0": "自動",
         "link_preview_1": "強制開",
-        "display_media": "展示媒體",
+        "display_media": "媒體",
         "display_media_-1": "閂",
         "display_media_0": "開",
         "display_media_1": "只有媒體，冇內容 (如果有媒體)",
-        "display_author": "展示作者",
+        "display_author": "作者",
         "display_author_-1": "閂",
         "display_author_0": "自動",
         "display_author_1": "強制開",
-        "display_via": "展示來源",
+        "display_via": "來源",
         "display_via_-3": "冇 RSS 標題，連結展示做文章標題",
         "display_via_-2": "閂晒",
         "display_via_-1": "冇 RSS 標題，連結喺最後",
         "display_via_0": "RSS 標題同埋連結",
         "display_via_1": "RSS 標題同埋展示做文章標題嘅連結",
-        "display_title": "展示文章標題",
+        "display_title": "文章標題",
         "display_title_-1": "閂",
         "display_title_0": "自動",
         "display_title_1": "強制開",
