--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -104,21 +104,21 @@
         "link_preview": "Link preview",
         "link_preview_0": "Auto",
         "link_preview_1": "Force enable",
-        "display_media": "Display media",
+        "display_media": "Media",
         "display_media_-1": "Disable",
         "display_media_0": "Enable",
         "display_media_1": "Only media, no content (if any media)",
-        "display_author": "Display author",
+        "display_author": "Author",
         "display_author_-1": "Disable",
         "display_author_0": "Auto",
         "display_author_1": "Force enable",
-        "display_via": "Display source",
+        "display_via": "Source",
         "display_via_-3": "No feed title, link displayed as post title",
         "display_via_-2": "Completely disable",
         "display_via_-1": "No feed title, link at the end",
         "display_via_0": "Feed title and link",
         "display_via_1": "Feed title and link displayed as post title",
-        "display_title": "Display post title",
+        "display_title": "Post title",
         "display_title_-1": "Disable",
         "display_title_0": "Auto",
         "display_title_1": "Force enable",
