--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -104,21 +104,21 @@
         "link_preview": "鏈接預覽",
         "link_preview_0": "自動",
         "link_preview_1": "強制啟用",
-        "display_media": "顯示媒體",
+        "display_media": "媒體",
         "display_media_-1": "禁用",
         "display_media_0": "啟用",
         "display_media_1": "僅媒體，無內容 (如有媒體)",
-        "display_author": "顯示作者",
+        "display_author": "作者",
         "display_author_-1": "禁用",
         "display_author_0": "自動",
         "display_author_1": "強制啟用",
-        "display_via": "顯示來源",
+        "display_via": "來源",
         "display_via_-3": "無源標題，鏈接顯示爲文章標題",
         "display_via_-2": "完全禁用",
         "display_via_-1": "無源標題，鏈接在尾部",
         "display_via_0": "源標題和鏈接",
         "display_via_1": "源標題和顯示爲文章標題的鏈接",
-        "display_title": "顯示文章標題",
+        "display_title": "文章標題",
         "display_title_-1": "禁用",
         "display_title_0": "自動",
         "display_title_1": "強制啟用",
