feat(*): new sourcing format "No feed title, bare link at the end"
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/src/i18n/ca.json
+++ b/src/i18n/ca.json
@@ -113,6 +113,7 @@
         "display_author_0": "",
         "display_author_1": "",
         "display_via": "",
+        "display_via_-4": "",
         "display_via_-3": "",
         "display_via_-2": "",
         "display_via_-1": "",
