--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -113,6 +113,7 @@
         "display_author_0": "Otomatik",
         "display_author_1": "Etkinleştirmeyi zorla",
         "display_via": "Kaynak",
+        "display_via_-4": "",
         "display_via_-3": "Özet akışı başlığı yok, bağlantı gönderi başlığı olarak görüntüleniyor",
         "display_via_-2": "Tamamen devre dışı bırak",
         "display_via_-1": "Yayın başlığı yok, bağlantı sonda",
