--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -113,6 +113,7 @@
         "display_author_0": "",
         "display_author_1": "",
         "display_via": "",
+        "display_via_-4": "",
         "display_via_-3": "",
         "display_via_-2": "",
         "display_via_-1": "",
