--- a/src/i18n/yue.json
+++ b/src/i18n/yue.json
@@ -113,9 +113,10 @@
         "display_author_0": "自動",
         "display_author_1": "強制開",
         "display_via": "來源",
+        "display_via_-4": "冇 RSS 標題，裸連結喺最後",
         "display_via_-3": "冇 RSS 標題，連結展示做文章標題",
         "display_via_-2": "閂晒",
-        "display_via_-1": "冇 RSS 標題，連結喺最後",
+        "display_via_-1": "冇 RSS 標題，文字連結喺最後",
         "display_via_0": "RSS 標題同埋連結",
         "display_via_1": "RSS 標題同埋展示做文章標題嘅連結",
         "display_title": "文章標題",
