--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -113,9 +113,10 @@
         "display_author_0": "自動",
         "display_author_1": "強制啟用",
         "display_via": "來源",
+        "display_via_-4": "無源標題，裸鏈接附于尾部",
         "display_via_-3": "無源標題，鏈接顯示爲文章標題",
         "display_via_-2": "完全禁用",
-        "display_via_-1": "無源標題，鏈接在尾部",
+        "display_via_-1": "無源標題，文本鏈接附于尾部",
         "display_via_0": "源標題和鏈接",
         "display_via_1": "源標題和顯示爲文章標題的鏈接",
         "display_title": "文章標題",
