--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -102,6 +102,7 @@
         "length_limit": "",
         "length_limit_unlimited": "",
         "link_preview": "",
+        "link_preview_-1": "",
         "link_preview_0": "",
         "link_preview_1": "",
         "display_media": "",
