--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -102,6 +102,7 @@
         "length_limit": "Uzunluk sınırı (yalnızca otomatik mod)",
         "length_limit_unlimited": "Sınırsız",
         "link_preview": "Bağlantı önizlemesi",
+        "link_preview_-1": "",
         "link_preview_0": "Otomatik",
         "link_preview_1": "Etkinleştirmeyi zorla",
         "display_media": "Medya",
