--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -102,6 +102,7 @@
         "length_limit": "长度限制 (仅限自动模式)",
         "length_limit_unlimited": "无限制",
         "link_preview": "链接预览",
+        "link_preview_-1": "禁用",
         "link_preview_0": "自动",
         "link_preview_1": "强制启用",
         "display_media": "媒体",
