chore(l10n): minor trimming
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -104,7 +104,7 @@
         "link_preview": "Link preview",
         "link_preview_-1": "Disable",
         "link_preview_0": "Auto",
-        "link_preview_1": "Force enable",
+        "link_preview_1": "Enable",
         "display_media": "Media",
         "display_media_-1": "Disable",
         "display_media_0": "Enable",
@@ -112,7 +112,7 @@
         "display_author": "Author",
         "display_author_-1": "Disable",
         "display_author_0": "Auto",
-        "display_author_1": "Force enable",
+        "display_author_1": "Enable",
         "display_via": "Source",
         "display_via_-4": "No feed title, bare link at the end",
         "display_via_-3": "No feed title, link displayed as post title",
@@ -123,7 +123,7 @@
         "display_title": "Post title",
         "display_title_-1": "Disable",
         "display_title_0": "Auto",
-        "display_title_1": "Force enable",
+        "display_title_1": "Enable",
         "style": "Style",
         "style_0": "RSStT",
         "style_1": "flowerss",
