--- a/src/i18n/yue.json
+++ b/src/i18n/yue.json
@@ -104,7 +104,7 @@
         "link_preview": "連結預覽",
         "link_preview_-1": "閂",
         "link_preview_0": "自動",
-        "link_preview_1": "強制開",
+        "link_preview_1": "開",
         "display_media": "媒體",
         "display_media_-1": "閂",
         "display_media_0": "開",
@@ -112,7 +112,7 @@
         "display_author": "作者",
         "display_author_-1": "閂",
         "display_author_0": "自動",
-        "display_author_1": "強制開",
+        "display_author_1": "開",
         "display_via": "來源",
         "display_via_-4": "冇 RSS 標題，裸連結喺最後",
         "display_via_-3": "冇 RSS 標題，連結展示做文章標題",
@@ -123,7 +123,7 @@
         "display_title": "文章標題",
         "display_title_-1": "閂",
         "display_title_0": "自動",
-        "display_title_1": "強制開",
+        "display_title_1": "開",
         "style": "格式",
         "style_0": "",
         "style_1": "",
