--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -104,7 +104,7 @@
         "link_preview": "链接预览",
         "link_preview_-1": "禁用",
         "link_preview_0": "自动",
-        "link_preview_1": "强制启用",
+        "link_preview_1": "启用",
         "display_media": "媒体",
         "display_media_-1": "禁用",
         "display_media_0": "启用",
@@ -112,7 +112,7 @@
         "display_author": "作者",
         "display_author_-1": "禁用",
         "display_author_0": "自动",
-        "display_author_1": "强制启用",
+        "display_author_1": "启用",
         "display_via": "来源",
         "display_via_-4": "无源标题，裸链接置于结尾",
         "display_via_-3": "无源标题，链接显示为文章标题",
@@ -123,7 +123,7 @@
         "display_title": "文章标题",
         "display_title_-1": "禁用",
         "display_title_0": "自动",
-        "display_title_1": "强制启用",
+        "display_title_1": "启用",
         "style": "风格",
         "style_0": "",
         "style_1": "",
