--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -104,7 +104,7 @@
         "link_preview": "鏈接預覽",
         "link_preview_-1": "禁用",
         "link_preview_0": "自動",
-        "link_preview_1": "強制啟用",
+        "link_preview_1": "啟用",
         "display_media": "媒體",
         "display_media_-1": "禁用",
         "display_media_0": "啟用",
@@ -112,7 +112,7 @@
         "display_author": "作者",
         "display_author_-1": "禁用",
         "display_author_0": "自動",
-        "display_author_1": "強制啟用",
+        "display_author_1": "啟用",
         "display_via": "來源",
         "display_via_-4": "無源標題，裸鏈接附于尾部",
         "display_via_-3": "無源標題，鏈接顯示爲文章標題",
@@ -123,7 +123,7 @@
         "display_title": "文章標題",
         "display_title_-1": "禁用",
         "display_title_0": "自動",
-        "display_title_1": "強制啟用",
+        "display_title_1": "啟用",
         "style": "樣式",
         "style_0": "",
         "style_1": "",
