--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -114,10 +114,10 @@
         "display_author_0": "Auto",
         "display_author_1": "Enable",
         "display_via": "Source",
-        "display_via_-4": "No feed title, bare link at the end",
+        "display_via_-4": "No feed title, bare URL at the end",
         "display_via_-3": "No feed title, link displayed as post title",
         "display_via_-2": "Completely disable",
-        "display_via_-1": "No feed title, text link at the end",
+        "display_via_-1": "No feed title, hyperlink at the end",
         "display_via_0": "Feed title and link",
         "display_via_1": "Feed title and link displayed as post title",
         "display_title": "Post title",
