--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -114,10 +114,10 @@
         "display_author_0": "自动",
         "display_author_1": "启用",
         "display_via": "来源",
-        "display_via_-4": "无源标题，裸链接置于结尾",
+        "display_via_-4": "无源标题，裸 URL 置于结尾",
         "display_via_-3": "无源标题，链接显示为文章标题",
         "display_via_-2": "完全禁用",
-        "display_via_-1": "无源标题，文本链接置于结尾",
+        "display_via_-1": "无源标题，超链接置于结尾",
         "display_via_0": "源标题和链接",
         "display_via_1": "源标题和显示为文章标题的链接",
         "display_title": "文章标题",
