--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -101,7 +101,7 @@
         "send_mode_2": "强制 Telegram 消息",
         "length_limit": "長度限制 (僅限自動模式)",
         "length_limit_unlimited": "無限",
-        "link_preview": "鏈接預覽",
+        "link_preview": "連結預覽",
         "link_preview_-1": "禁用",
         "link_preview_0": "自動",
         "link_preview_1": "啟用",
@@ -114,12 +114,12 @@
         "display_author_0": "自動",
         "display_author_1": "啟用",
         "display_via": "來源",
-        "display_via_-4": "無源標題，裸鏈接附于尾部",
-        "display_via_-3": "無源標題，鏈接顯示爲文章標題",
+        "display_via_-4": "無源標題，裸 URL 附于尾部",
+        "display_via_-3": "無源標題，連結顯示爲文章標題",
         "display_via_-2": "完全禁用",
-        "display_via_-1": "無源標題，文本鏈接附于尾部",
-        "display_via_0": "源標題和鏈接",
-        "display_via_1": "源標題和顯示爲文章標題的鏈接",
+        "display_via_-1": "無源標題，超連結附于尾部",
+        "display_via_0": "源標題和連結",
+        "display_via_1": "源標題和顯示爲文章標題的連結",
         "display_title": "文章標題",
         "display_title_-1": "禁用",
         "display_title_0": "自動",
