--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -39,7 +39,8 @@
         "permission_denied_input_command": "請輸入命令以繼續…",
         "permission_denied_no_direct_use": "不應直接使用此命令。請改用 /set。",
         "promote_to_admin_prompt": "如果您是該群組的匿名管理員，請將機器人提升爲管理員 (無需權限)，以授權機器人驗證您的身份。",
-        "group_upgrade_needed_prompt": "糟糕，您的群組尚未升級爲超級群組。通常，Telegram 伺服器應在某個時候自動執行此升級，但如果沒有，則必須手動升級它，然後才能使用機器人。\n請按照以下步驟操作：\n1. 轉到群組資訊，然後按兩下「管理組」\n2. 將「新成員的聊天記錄」更改爲「可見」\n3. 保存聊天記錄可見性設置\n4. 保存所有設置\n5. (可選) 如果需要，您可以再次將「新成員的聊天記錄」更改爲「隱藏」\n6. 現在您應該能夠使用機器人了"
+        "group_upgrade_needed_prompt": "糟糕，您的群組尚未升級爲超級群組。通常，Telegram 伺服器應在某個時候自動執行此升級，但如果沒有，則必須手動升級它，然後才能使用機器人。\n請按照以下步驟操作：\n1. 轉到群組資訊，然後按兩下「管理組」\n2. 將「新成員的聊天記錄」更改爲「可見」\n3. 保存聊天記錄可見性設置\n4. 保存所有設置\n5. (可選) 如果需要，您可以再次將「新成員的聊天記錄」更改爲「隱藏」\n6. 現在您應該能夠使用機器人了",
+        "sub_limit_reached_prompt": "訂閱的數量已經到達機器人管理員實施的限額 (%d/%d)。在進一步新增訂閱前，請先退訂 (/unsub) 一些訂閱。"
     },
     "l10n_misc": {
         "choose_sub_prompt": "請選擇訂閱",
