--- a/src/i18n/cs.json
+++ b/src/i18n/cs.json
@@ -39,7 +39,8 @@
         "permission_denied_input_command": "Pro pokračování zadejte příkaz…",
         "permission_denied_no_direct_use": "Tento příkaz by neměl být používán přímo. Místo toho použijte příkaz /set.",
         "promote_to_admin_prompt": "Pokud jste anonymní správce této skupiny, povyšte bota na správce (není třeba povolení), aby mohl ověřit vaši totožnost.",
-        "group_upgrade_needed_prompt": ""
+        "group_upgrade_needed_prompt": "",
+        "sub_limit_reached_prompt": ""
     },
     "l10n_misc": {
         "choose_sub_prompt": "",
