--- a/src/i18n/ca.json
+++ b/src/i18n/ca.json
@@ -22,6 +22,7 @@
         "uncaught_internal_error": "Error intern no detectat",
         "operation_timeout_error": "Temps d'espera de l'operació",
         "action_invalid": "L'acció no és vàlida",
+        "sub_limit_reached": "",
         "flood_wait_prompt": "Estàs operant amb tanta freqüència que el bot ha superat el límit de velocitat de Telegram. Si us plau, baixa el ritme.",
         "edit_conflict_prompt": "Estàs operant amb massa freqüència i l'operació entra en conflicte. Si us plau, baixa el ritme.",
         "callback_already_running_prompt": "Has sol·licitat una altra ordre. Torna-ho a provar un cop finalitzi.",
