--- a/src/i18n/cs.json
+++ b/src/i18n/cs.json
@@ -22,6 +22,7 @@
         "uncaught_internal_error": "Nezachycená interní chyba",
         "operation_timeout_error": "Časový limit operace",
         "action_invalid": "Neplatná akce",
+        "sub_limit_reached": "",
         "flood_wait_prompt": "Pracujete příliš rychle, takže bot překročil limit rychlosti Telegramu. Zpomalte prosím.",
         "edit_conflict_prompt": "Pracujete příliš často, aby nedocházelo ke konfliktům v provozu. Zpomalte prosím.",
         "callback_already_running_prompt": "Vyžádali jste si jiný příkaz. Po jeho dokončení to zkuste znovu.",
