--- a/src/i18n/id.json
+++ b/src/i18n/id.json
@@ -22,6 +22,7 @@
         "uncaught_internal_error": "",
         "operation_timeout_error": "",
         "action_invalid": "Tindakan tidak valid",
+        "sub_limit_reached": "",
         "flood_wait_prompt": "Anda mengoperasikan bot terlalu cepat hingga bot melewati batas Telegram. Harap memperlambat.",
         "edit_conflict_prompt": "Anda mengoperasikan bot terlalu sering sehingga terjadi konflik operasi. Harap melambat.",
         "callback_already_running_prompt": "Anda sedang menjalankan perintah lain. Silakan coba lagi setelah itu selesai.",
