--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -22,6 +22,7 @@
         "uncaught_internal_error": "Çözülmemiş iç hata",
         "operation_timeout_error": "İşlem zaman aşımı",
         "action_invalid": "Eylem geçersiz",
+        "sub_limit_reached": "",
         "flood_wait_prompt": "Botu, Telegram'ın hız sınırını aşacak kadar sık çalıştırıyorsunuz. Lütfen yavaşlayın.",
         "edit_conflict_prompt": "İşlem çatışmalarını çok sık yaşıyorsunuz. Lütfen yavaşlayın.",
         "callback_already_running_prompt": "Başka bir komut istediniz. Lütfen bittikten sonra tekrar deneyin.",
